src/test/ui/span/multiline-span-E0072.stderr
error[E0072]: recursive type `ListNode` has infinite size
  --> $DIR/multiline-span-E0072.rs:2:1
   |
LL | / struct
LL | | ListNode
   | |________^ recursive type has infinite size
...
LL |       tail: Option<ListNode>,
   |             ---------------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `ListNode` representable
   |
LL |     tail: Option<Box<ListNode>>,
   |                  ++++        +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
